// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageHeader should match snapshot 1`] = `
<DocumentFragment>
  .emotion-0 {
  background: #FFFFFF;
  color: #000000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  border-bottom: 1px solid #DDDDDD;
  position: -webkit-sticky;
  position: sticky;
  top: 0rem;
  height: 4.5rem;
  padding-left: 1rem;
  padding-right: 1rem;
  z-index: 999;
}

<header
    class="emotion-0"
  />
</DocumentFragment>
`;

exports[`PageHeader should match snapshot with actions 1`] = `
<DocumentFragment>
  .emotion-1 {
  background: #FFFFFF;
  color: #000000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  border-bottom: 1px solid #DDDDDD;
  position: -webkit-sticky;
  position: sticky;
  top: 0rem;
  height: 4.5rem;
  padding-left: 1rem;
  padding-right: 1rem;
  z-index: 999;
}

.emotion-0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-0 >*+* {
  margin-left: 1rem;
}

<header
    class="emotion-1"
  >
    <div
      class="emotion-0"
    >
      <button>
        Action
      </button>
    </div>
  </header>
</DocumentFragment>
`;

exports[`PageHeader should match snapshot with backlink 1`] = `
<DocumentFragment>
  .emotion-5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-5 *+* {
  margin-left: 1rem;
}

.emotion-4 {
  font-family: "VTEX Trust",-apple-system,system-ui,BlinkMacSystemFont,sans-serif;
  font-variation-settings: 'WGHT' 475;
  font-size: 1.25rem;
  line-height: 1.2;
  letter-spacing: -0.0067em;
}

.emotion-6 {
  background: #FFFFFF;
  color: #000000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  border-bottom: 1px solid #DDDDDD;
  position: -webkit-sticky;
  position: sticky;
  top: 0rem;
  height: 4.5rem;
  padding-left: 1rem;
  padding-right: 1rem;
  z-index: 999;
}

.emotion-3 {
  font-family: "VTEX Trust",-apple-system,system-ui,BlinkMacSystemFont,sans-serif;
  font-variation-settings: 'WGHT' 600;
  font-size: 0.875rem;
  line-height: 1.1428571429;
  letter-spacing: 0.0125em;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  position: relative;
  color: #2953B2;
  background: transparent;
  padding: 0.5rem 0.75rem;
  height: 2.25rem;
}

.emotion-3:hover {
  color: #2953B2;
  background: #F1F4FC;
}

.emotion-3:active {
  color: #2953B2;
  background: #DDE5F7;
}

.emotion-3:disabled {
  background: transparent;
  color: #747474;
}

.emotion-3:focus:not([data-focus-visible-added]) {
  outline: none;
  box-shadow: none;
}

.emotion-3:focus {
  outline: none;
  box-shadow: 0rem 0rem 0rem 0.125rem #BBCBF0;
}

.emotion-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -ms-flex-pack: center;
  -webkit-justify-content: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  font-family: "VTEX Trust",-apple-system,system-ui,BlinkMacSystemFont,sans-serif;
  font-variation-settings: 'WGHT' 600;
  font-size: 0.875rem;
  line-height: 1.1428571429;
  letter-spacing: 0.0125em;
  visibility: visible;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
}

.emotion-1 svg {
  margin-right: 0.25rem;
}

.emotion-0 {
  height: 1.25rem;
  width: 1.25rem;
  min-height: 1.25rem;
  min-width: 1.25rem;
}

<header
    class="emotion-6"
  >
    <div
      class="emotion-5"
    >
      <button
        class="emotion-3"
        type="button"
      >
        <div
          class="emotion-2"
        >
          <div
            class="emotion-1"
          >
            <svg
              class="emotion-0"
              fill="currentColor"
              height="1.25rem"
              viewBox="0 0 256 256"
              width="1.25rem"
              xmlns="http://www.w3.org/2000/svg"
            >
              <rect
                fill="none"
                height="16rem"
                width="16rem"
              />
              <line
                fill="none"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="18"
                x1="216"
                x2="40"
                y1="128"
                y2="128"
              />
              <polyline
                fill="none"
                points="112 56 40 128 112 200"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="18"
              />
            </svg>
          </div>
        </div>
      </button>
      <h1
        class="emotion-4"
      >
        test paragraph
      </h1>
    </div>
  </header>
</DocumentFragment>
`;

exports[`PageHeader should match snapshot with title 1`] = `
<DocumentFragment>
  .emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.emotion-1 *+* {
  margin-left: 1rem;
}

.emotion-0 {
  font-family: "VTEX Trust",-apple-system,system-ui,BlinkMacSystemFont,sans-serif;
  font-variation-settings: 'WGHT' 475;
  font-size: 1.25rem;
  line-height: 1.2;
  letter-spacing: -0.0067em;
}

.emotion-2 {
  background: #FFFFFF;
  color: #000000;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  justify-content: space-between;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: 100%;
  border-bottom: 1px solid #DDDDDD;
  position: -webkit-sticky;
  position: sticky;
  top: 0rem;
  height: 4.5rem;
  padding-left: 1rem;
  padding-right: 1rem;
  z-index: 999;
}

<header
    class="emotion-2"
  >
    <div
      class="emotion-1"
    >
      <h1
        class="emotion-0"
      >
        test paragraph
      </h1>
    </div>
  </header>
</DocumentFragment>
`;
